--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -698,23 +698,21 @@ $this->inlineScript()->appendScript(
                             });
                         }
 
-                        //downloadlink is now: domain/api/files/download/id/ID/s/TOKEN/t/TIMESTAMP/FILE_NAME/u/USERID
+                        //downloadlink is now: domain/api/files/downloadfile/id/ID/s/TOKEN/t/TIMESTAMP/u/USERID/FILE_NAME
                         var hash = '<?= $this->download_hash ?>';
                         var timetamp = '<?= $this->download_timestamp ?>';
                         var userid = '<?= $this->member_id?>';
 
                         var downloadUrl = pploadApiUri + 'files/downloadfile/id/' + this.id + '/o/1/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name;
-                        var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
+                        var downloadLinkFilename = link ? this.name + ' (External Link)' : this.name;
+                        var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + downloadLinkFilename + '</a>';
 
-                        if(this.active == '0') {
-                            deletePploadFileBtnPerFile = '';
-                            downloadLink = this.name;
-                            if ((typeof link != 'undefined') && (link != "")) {
-                                downloadLink = this.name + ' (External Link)';
-                            }
-                        } else {
+                        if(this.active == '1') {
                             deletePploadFileBtnPerFile = deletePploadFileBtn;
+                        } else {
+                            deletePploadFileBtnPerFile = '';
                         }
+
                         var numDownloads = this.downloaded_count;
                         numDownloads = numDownloads || 0;
 
@@ -751,7 +749,7 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"4\">Windows executable</option>'
                             + '</select>'
                             + '</td>'
-                            /*
+                            <?php /*
                             + '<td>'
                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                             + '    <option value=""></option>'
@@ -767,7 +765,7 @@ $this->inlineScript()->appendScript(
                                 ?>
                             + '</select>'
                             + '</td>'
-                            */
+                            */?>
                             + '<td>' + this.created_timestamp + '</td>'
                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                             + '<td style="text-align: right">' + numDownloads + '</td>'
@@ -792,11 +790,12 @@ $this->inlineScript()->appendScript(
                             $packagetypeSelect.prop('disabled', 'disabled');
                         }
                         
+                        /*
                         $architectureSelect = $modalPpload.find('#data-select-architecture' + this.id);
                         if(this.active == '0') {
                             $architectureSelect.prop('disabled', 'disabled');
                         }
-
+                        */
                         if ((typeof link != 'undefined') && (link != "")) {
                             //$("#data-link" + this.id).attr('href', decodeURIComponent(link));
                             $("#data-link" + this.id).attr('target','_blank');
@@ -977,7 +976,7 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
-                        /*
+                        <?php /*
                         + '<td>'
                         + '<select class="form-control input-sm" id="data-select-architecture' + data.file.id + '" data-architecture-id="" name="architecture">'
                         + '    <option value=""></option>'
@@ -993,7 +992,7 @@ $this->inlineScript()->appendScript(
                             ?>
                         + '</select>'
                         + '</td>'
-                        */
+                        */?>
                         + '<td>' + data.file.created_timestamp + '</td>'
                         + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                         + '<td style="text-align: right">0</td>'
