--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -29,8 +29,7 @@
       <p><h1>What are Plings?</h1>
         <p>Contributors to any part of the Opendesktop platform get Plings each time their contribution/product is downloaded. Pling converts download-clicks into monetary value based on the following terms:</p>
         <p></p>
-        <p>1 Pling = 1.00 US-Dollar</p>
-        <p>Plings = Number of Downloads * Pling-Factor * 1 $-cent</p>
+        <p>Payout = Number of Downloads * Pling-Factor * 1 $-cent</p>
         <p></p>
         <p>Each product category is valued by a so-called “Pling-Factor”.</p>
         <p></p>
@@ -38,9 +37,9 @@
         <p></p>
         <p>Based on the actual amount of content and downloads, we may adjust these values at any time, even during a month.</p>
         <p></p>
-        <p>The amount of collected Plings for each user is then paid out every month. Up to the amount of received Plings for each product.</p>
+        <p>The payout for each product is the amount of collected Plings for each user is then paid out every month up to the amount of received Plings for each product.</p>
         <p></p>
-        <p>You receive Plings by having supporters pling your products. Every received Pling is also 1.00 US-Dollar and raises the maximum payout amount for that product.</p>
+        <p>You receive Plings by having supporters pling your products. Every received Pling raises the maximum payout limit for that product by 1.00 US-Dollar.</p>
         <p></p>
         <p>Payouts are voluntary and we reserve the right to cancel any single product or payout or all payouts without any reason.</p>
         <p></p>
